# smoke

./: CMakeLists.txt  README.md  bot.md  memo.md  package.xml
action/: Alarm.action
appviz/include/: cvqtimage.h  mainwindow.h  mainwindow.ui  subnode.h
appviz/resources/: images.qrc
appviz/src/: main.cpp  mainwindow.cpp  mainwindow.ui  subnode.cpp
backup/: ui_mainwindow.h
config/: apr02.pgm  apr02.yaml  darknet_svm.yml  darknet_svm_rbx1.yml  jun05.yaml  jun06.yaml  jun06_map.pgm  jun06_map.yaml
data/: eigenmat.yml
data/eigen/: EigenData.yml  EigenData_100_1.yml  EigenData_100_2.yml  EigenData_100_3.yml  EigenData_100_4.yml  EigenData_100_5.yml  EigenData_20_1.yml  EigenData_20_2.yml  EigenData_20_3.yml  EigenData_20_4.yml  EigenData_20_5.yml  EigenData_25_1.yml  EigenData_25_3.yml  EigenData_25_4.yml  EigenData_25_5.yml  EigenData_50_1.yml  EigenData_50_2.yml  EigenData_50_3.yml  EigenData_50_4.yml  EigenData_50_5.yml
include/: DeviceM.h  LBP.h  darknetDetector.h  libfreenect.hpp  rgbData.h
launch/: darknet_ros_smoke.launch  darknet_ros_test.launch  smoke.1.launch  smoke.2.launch  smoke.3.launch  smoke.launch  test_act.launch  test_autonav.launch  test_darknet.launch  test_srv.launch  usb_cam.1.launch
models/: model_100_5.xml  model_10_3.xml  model_20_2.xml  model_20_3.xml  model_25_5.xml
models/nn/: model.12.h5  model.18.h5  model.24.h5  model.30.h5  model.36.h5  model.6.h5
models/svm/: model_100_1.xml  model_100_2.xml  model_100_3.xml  model_100_4.xml  model_100_5.xml  model_10_1.xml  model_10_2.xml  model_10_3.xml  model_10_4.xml  model_10_5.xml  model_20_1.xml  model_20_2.xml  model_20_3.xml  model_20_4.xml  model_20_5.xml  model_25_1.xml  model_25_2.xml  model_25_3.xml  model_25_4.xml  model_25_5.xml  model_50_1.xml  model_50_2.xml  model_50_3.xml  model_50_4.xml  model_50_5.xml
models/svmbkp/: model_100_2.xml  model_10_1.xml  model_10_4.xml  model_10_5.xml  model_25_1.xml  model_25_2.xml  model_25_4.xml  model_50_1.xml  model_50_4.xml
msg/: BboxImage.msg  BoundingBox.msg  BoundingBoxes.msg  alarm.msg
scripts/: action_buttons.py  alarm_sub.py  follow_the_route.py  go_to_specific_point_on_map.py  kobuki_actSrv.py  kobuki_actTest.py  smoke_nn_server.py  weixin_alarm.py
src/: LBP.cpp  bbox_test_node.cpp  darknetDetector.cpp  darknet_image_fetch.cpp  darknet_svm_node.cpp  rgbData.cpp  smoke_client.cpp  smoke_svm_client.cpp  smoke_svm_server.cpp  smoke_svm_serverbkp.cpp  video_stream_node.cpp
srv/: darknet_svm_node.srv  kinect_srv.srv  smoke.srv  smoke_svm.srv
test/: testSrv.cpp
